# plump-bot

./: .gitignore  bug_explain.md  modal_train.py  pyproject.toml  setup.md
docs/: model_architecture.md  training.md
examples/: check_acceptance.py  check_mps.py  checkpoint_arena.py  checkpoint_elo_ladder.py  checkpoint_tournament.py  evaluate_policy.py  model_forward.py  play_gui.py  plot_search_metrics.py  plot_training_metrics.py  random_play.py  run_search_gate.py  train_best_response.py  train_ppo.py  train_search.py
plump/: __init__.py  cards.py  env.py  evaluation.py  evaluation_workers.py  information_search.py  observation.py  policies.py  rounds.py  rules.py  search.py  state.py
plump/gui/: __init__.py  app.py
scripts/: benchmark_ppo_throughput.py  follow_checkpoint_elo_ladder.py  modal_migrate_v9.py  modal_pull_run.zsh  play_gui_latest.zsh  run_training_v4_50m_seed1.zsh  run_training_v5_50m_seed1.zsh  run_training_v6_8m_seed1.zsh  run_training_v7_8m_expert_seed1.zsh  run_training_v8_10m_seed1.zsh  run_training_v8_supervised.zsh  run_training_v8_then_v9.zsh  run_training_v9_10m_expert_seed1.zsh  run_training_v9_8m_seed1.zsh  run_training_v9_8m_supervised.zsh  update_training_metrics_live.zsh  update_training_metrics_v4_24h.zsh  update_training_metrics_v5.zsh  update_training_metrics_v6.zsh  update_training_metrics_v8.zsh
tests/: test_env.py  test_evaluation.py  test_evaluation_workers.py  test_expert_iteration.py  test_gui.py  test_modeling.py  test_policies.py  test_rules.py  test_search.py  test_search_distill.py  test_training.py
(+16 files in other folders)
